--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ethereum-attestation-service/eas-sdk": "^0.29.0",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
+    "@metamask/sdk": "^0.3.2",
     "@sismo-core/sismo-connect-react": "^0.0.15",
     "@types/node": "^16.18.0",
     "@types/react": "^18.0.23",
