--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@enzoferey/ethers-error-parser": "^0.2.2",
     "@ethereum-attestation-service/eas-sdk": "^0.29.0",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@metamask/sdk": "^0.3.2",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
     "@sismo-core/sismo-connect-react": "^0.0.15",
     "@types/node": "^16.18.0",
     "@types/react": "^18.0.23",
